<resources>
    <string name="app_name">NUMAD17S-DharakSavalia</string>
    <string name="long_app_name">Ultimate Tic Tac Toe</string>
    <string name="long_word_game"> Scroggle</string>
    <string name="action_settings">Settings</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="declare_winner">%1$s is the winner</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_title">About Ultimate Tic Tac Toe</string>
    <string name="about_label">About</string>
    <string name="changeNameLabel">Change Player Username</string>
    <string name="ok_label">OK</string>
    <string name="learderboard">Leaderboard</string>
    <string name="Set">Set</string>
    <string name="about_text">\
This game is played just like
regular Tic Tac Toe with one difference: to win a tile
you have to win a smaller game of Tic Tac Toe inside that tile.\n\
\n\
A tie happens when there are no further moves.
In the case of a tie in a small board, that will count as a win for
both sides in the larger game.
</string>
    <string name="wordgameabout_text">\
    You have 90 seconds to make nine words in each big tile. Only one word can be formed in each 3x3.\n
        After 90 second you will move to bonus round. In this level there are no rules. More the words you form in round one more better option you get.
        You cannot form same words.
    </string>
<string name="instruction_1">\
    Tap on at least three green box\n

    </string>
    <string name="instruction_3">\
    click on below image to submit the word

    </string>
<string name="instruction_2">\
    Click "Continue" to continue game with tutorial.\n
    If you want to stop the tutorial click\n

    </string>
    <string name="quickstart_message">The Log Token button logs the Registration token to the log. The Send Notification Button sends the notification to the client device.</string>
    <string name="send_notification">Send Notification</string>
    <string name="log_token">Log Token</string>


    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="go_to_fcm_demo">FCM Demo</string>
    <string name="go_to_realtime_database_demo">Realtime Database Demo</string>

    <string name="username">User Name</string>
    <string name="score">Score</string>
    <string name="add5">ADD Five</string>
    <string name="onlinegame">Play Multiplayer</string>
    <string name="offlinegame">Play Single Player</string>
    <string name="userregisterationtitle">Enter your details</string>
    <string name="usernameregisteration">Enter your online name</string>
    <string name="emailidhint">Email id for friends</string>
<string name="stoptutorial">Stop Tutorial
    </string>
    <string name="continuetutorial">Continue
    </string>
</resources>
